控制器更新接口增加切片增减
